changed title, links and placeholder for search

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="fav.png">
-	<title>Tea Green</title>
+	<title>Home Page</title>
 </head>
 
 <body>
@@ -38,33 +38,33 @@
 			</div>
 			<div class="content">
 				<div class="links">
-					<a href="https://twitter.com/" target="_blank">
-						<i class="fab fa-twitter"></i>
+					<a href="https://reddit/r/unixporn" target="_blank">
+						<i class="fab fa-linux"></i>
 					</a>
-					<a href="https://www.youtube.com/feed/subscriptions" target="_blank">
+					<a href="https://invidious.snopyta.org/feed/popular" target="_blank">
 						<i class="fab fa-youtube"></i>
 					</a>
-					<a href="https://mail.google.com/mail/ca/u/1/#inbox" target="_blank">
+					<a href="https://mail.protonmail.com/login" target="_blank">
 						<i class="fas fa-inbox"></i>
 					</a>
-					<a href="https://www.reddit.com/r/news/" target="_blank">
+					<a href="https://omni.se" target="_blank">
 						<i class="fas fa-newspaper"></i>
 					</a>
-					<a href="https://open.spotify.com/browse/featured" target="_blank">
-						<i class="fab fa-spotify"></i>
+					<a href="http://192.168.10.172/admin/" target="_blank">
+						<i class="fab fa-codiepie"></i>
 					</a>
-					<a href="https://www.twitch.tv/" target="_blank">
-						<i class="fab fa-twitch"></i>
+					<a href="https://soundcloud.com/" target="_blank">
+						<i class="fab fa-soundcloud"></i>
 					</a>
 					<a href="https://www.github.com/" target="_blank">
 						<i class="fab fa-github"></i>
 					</a>
-					<a href="https://www.reddit.com/" target="_blank">
-						<i class="fab fa-reddit"></i>
+					<a href="https://news.ycombinator.com/" target="_blank">
+						<i class="fab fa-hacker-news"></i>
 					</a>
 				</div>
 				<div class="search">
-					<input id="searchbox" placeholder="-d | -y | -w | -r | -h" type="text" autocomplete="off">
+					<input id="searchbox" placeholder="search" type="text" autocomplete="off">
 				</div>
 			</div>
 		</div>
