changed placeholder for search

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					</a>
 				</div>
 				<div class="search">
-					<input id="searchbox" placeholder="search" type="text" autocomplete="off">
+					<input id="searchbox" placeholder="-d | -y | -w | -r | -h" type="text" autocomplete="off">
 				</div>
 			</div>
 		</div>
