--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="content">
 				<div class="links">
-					<a href="https://reddit/r/unixporn" target="_blank">
+					<a href="https://reddit.com/r/unixporn" target="_blank">
 						<i class="fab fa-linux"></i>
 					</a>
 					<a href="https://invidious.snopyta.org/feed/popular" target="_blank">
