--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<a href="https://soundcloud.com/" target="_blank">
 						<i class="fab fa-soundcloud"></i>
 					</a>
-					<a href="https://www.github.com/" target="_blank">
+					<a href="https://github.com/xcvzn/" target="_blank">
 						<i class="fab fa-github"></i>
 					</a>
 					<a href="https://news.ycombinator.com/" target="_blank">
