--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<i class="fas fa-newspaper"></i>
 					</a>
 					<a href="http://192.168.10.172/admin/" target="_blank">
-						<i class="fab fa-solid-pie-chart"></i>
+						<i class="fab fa-pie-chart"></i>
 					</a>
 					<a href="https://soundcloud.com/" target="_blank">
 						<i class="fab fa-soundcloud"></i>
