changed icon and prevented links from opening in a new tab

--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
 			</div>
 			<div class="content">
 				<div class="links">
-					<a href="https://reddit.com/r/unixporn" target="_blank">
+					<a href="https://reddit.com/r/unixporn">
 						<i class="fab fa-linux"></i>
 					</a>
-					<a href="https://invidious.snopyta.org/feed/popular" target="_blank">
+					<a href="https://invidious.snopyta.org/feed/popular">
 						<i class="fab fa-youtube"></i>
 					</a>
-					<a href="https://mail.protonmail.com/login" target="_blank">
+					<a href="https://mail.protonmail.com/login">
 						<i class="fas fa-inbox"></i>
 					</a>
-					<a href="https://omni.se" target="_blank">
+					<a href="https://omni.se">
 						<i class="fas fa-newspaper"></i>
 					</a>
-					<a href="http://192.168.10.172/admin/" target="_blank">
-						<i class="fab fa-chart"></i>
+					<a href="http://192.168.10.172/admin/">
+						<i class="fab fa-shield"></i>
 					</a>
-					<a href="https://soundcloud.com/" target="_blank">
+					<a href="https://soundcloud.com/">
 						<i class="fab fa-soundcloud"></i>
 					</a>
-					<a href="https://github.com/xcvzn/" target="_blank">
+					<a href="https://github.com/xcvzn/">
 						<i class="fab fa-github"></i>
 					</a>
-					<a href="https://news.ycombinator.com/" target="_blank">
+					<a href="https://news.ycombinator.com/">
 						<i class="fab fa-hacker-news"></i>
 					</a>
 				</div>
