--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<i class="fas fa-newspaper"></i>
 					</a>
 					<a href="http://192.168.10.172/admin/">
-						<i class="fa fa-shield"></i>
+						<i class="fas fa-chart-pie"></i>
 					</a>
 					<a href="https://soundcloud.com/">
 						<i class="fab fa-soundcloud"></i>
